# ChangeLog for dev-perl/Mail-ClamAV
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Mail-ClamAV/ChangeLog,v 1.35 2009/04/03 06:20:28 tove Exp $

  03 Apr 2009; Torsten Veller <tove@gentoo.org> Mail-ClamAV-0.22-r1.ebuild:
  Enforce only one make job (#264666)

  30 Sep 2008; Torsten Veller <tove@gentoo.org> -Mail-ClamAV-0.21.ebuild,
  -Mail-ClamAV-0.22.ebuild:
  Cleanup

  22 Sep 2008; Raúl Porcel <armin76@gentoo.org> Mail-ClamAV-0.22-r1.ebuild:
  ia64 stable wrt #237939

  21 Sep 2008; Friedrich Oslage <bluebird@gentoo.org>
  Mail-ClamAV-0.22-r1.ebuild:
  Stable on sparc, bug #237939

  20 Sep 2008; Markus Meier <maekke@gentoo.org> Mail-ClamAV-0.22-r1.ebuild:
  amd64/x86 stable, bug #237939

*Mail-ClamAV-0.22-r1 (20 Sep 2008)

  20 Sep 2008; Torsten Veller <tove@gentoo.org>
  +files/0.22-clamav-0.94.patch, +Mail-ClamAV-0.22-r1.ebuild:
  Added fix for clamav-0.94. Thanks to Dan Coats (#237939)

  06 Sep 2008; Tobias Scherbaum <dertobi123@gentoo.org>
  -Mail-ClamAV-0.20.ebuild:
  Remove 0.20 as it depends on a vulnerable version of clamav

  23 May 2008; Markus Meier <maekke@gentoo.org> Mail-ClamAV-0.22.ebuild:
  amd64 stable, bug #218510

  22 May 2008; Raúl Porcel <armin76@gentoo.org> Mail-ClamAV-0.22.ebuild:
  ia64/sparc stable wrt #218510

  21 May 2008; Christian Faulhammer <opfer@gentoo.org>
  Mail-ClamAV-0.22.ebuild:
  stable x86, bug 218510

*Mail-ClamAV-0.22 (19 May 2008)

  19 May 2008; Torsten Veller <tove@gentoo.org> +Mail-ClamAV-0.22.ebuild:
  Version bump. Should work with latest clamav (#218510)

  10 Mar 2008; Steve Dibb <beandog@gentoo.org> Mail-ClamAV-0.21.ebuild:
  amd64 stable, bug 210566

  20 Feb 2008; Raúl Porcel <armin76@gentoo.org> Mail-ClamAV-0.21.ebuild:
  ia64/sparc stable wrt #210566

  19 Feb 2008; Christian Faulhammer <opfer@gentoo.org>
  Mail-ClamAV-0.21.ebuild:
  stable x86, bug 210566

  08 Feb 2008; Andrej Kacian <ticho@gentoo.org> Mail-ClamAV-0.20.ebuild,