@@ -3,13 +3,15 @@ Hash: SHA1
 
 AUX 0.22-clamav-0.94.patch 2165 RMD160 134bd67c08fb69ba8b7f29db07f833f43921b1d4 SHA1 56b3e9170951102f2240bea33e043d5995e86ac8 SHA256 a02d60cc35dc02f59244afe5ba9fa6e913c06116205dc672f2f16adc0996c843
 DIST Mail-ClamAV-0.22.tar.gz 14283 RMD160 55ffcac380e50be3a0e1807121c532f838e0c13a SHA1 ce32aa368c34780dd87caf1ee2a1cdc93f3a0d69 SHA256 1927671296cd398a1b0ce3102683ed23e78648fc9dd643a8fab92d18e33b010b
+DIST Mail-ClamAV-0.28.tar.gz 17289 RMD160 b9aa0d250fea5b9080089ce1b5e2651793a83795 SHA1 5469630577c4d2e70fa8253709539867c84f0c01 SHA256 ca9a34ebd1fef0ef9263575c8aff38d9ac305cb0b83eee44c4462c290dc7a623
 EBUILD Mail-ClamAV-0.22-r1.ebuild 552 RMD160 387b5aea19078301adcec1e2b7636498766186a5 SHA1 342bdd6b01b0bb8ffff865795f68d3510cac8334 SHA256 be8ffe36fc04ca6fd231db77de19353515f038af054068f7dcd61239cefdf8ee
-MISC ChangeLog 4638 RMD160 2090f8b2d650458b28dccb5246fe7564ced469fb SHA1 32a24b9dd0a51c77a4d7d3b1f89c931798c7649a SHA256 09aa6e333633c6dd117e2d8659a9bf459aef2ce91327a5ef71cd43fe2db2778d
+EBUILD Mail-ClamAV-0.28.ebuild 508 RMD160 36be64a84d6e5a03ae723a35d58eb2529d8fb333 SHA1 5bdb4db5a82cca7267845f148073c865eec3198e SHA256 59d43392783e8fefc9dd4801ffc48e8c7a62b8369bf659f82202a9e482c2294b
+MISC ChangeLog 4771 RMD160 c6df36551c37b243893f1b5a7e71a9a29681fa76 SHA1 f43d8be1bea8c032008dd018f9e5b0e26104a43a SHA256 890fcbd2a4dbb602ca929c62014ac66a89dd550849bdb349babc15bd1d88be23
 MISC metadata.xml 403 RMD160 d1bca73f8756e44365ede55b4ff962717df920af SHA1 42342810bfa5b5381c24ea0fa09fc55b11bd7d44 SHA256 eff678535a7bbaea6cca880396fd10feb7f59af67a4f191d939d83596ed92cba
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.10 (GNU/Linux)
+Version: GnuPG v2.0.11 (GNU/Linux)
 
-iEYEARECAAYFAknVqrYACgkQV3J2n04Eauyq5gCgjtRaNF5mik10YQpPKphpp5mg
-CSwAoJYMHZRP7Cp67nDxZ7uQdQWZX2kb
-=NcPX
+iEYEARECAAYFAkn1iMsACgkQV3J2n04EauyhHACcDlbob6Zov4sBSPnMqHblmUFX
++QoAn2Nbq5WS980nSKO16IDPus9iAgWl
+=lcLB
 -----END PGP SIGNATURE-----
