@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/Mail-ClamAV
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Mail-ClamAV/ChangeLog,v 1.35 2009/04/03 06:20:28 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Mail-ClamAV/ChangeLog,v 1.36 2009/04/27 10:28:11 tove Exp $
+
+*Mail-ClamAV-0.28 (27 Apr 2009)
+
+  27 Apr 2009; Torsten Veller <tove@gentoo.org> +Mail-ClamAV-0.28.ebuild:
+  Version bump (#264836)
 
   03 Apr 2009; Torsten Veller <tove@gentoo.org> Mail-ClamAV-0.22-r1.ebuild:
   Enforce only one make job (#264666)
